RESOLVED FIXED41767
[Qt] Missing include to build QtWebKit with WebKit2 in MediaPlayerPrivatePhonon.cpp
https://bugs.webkit.org/show_bug.cgi?id=41767
Summary [Qt] Missing include to build QtWebKit with WebKit2 in MediaPlayerPrivatePhon...
Jesus Sanchez-Palencia
Reported 2010-07-07 07:11:50 PDT
[Qt] Missing include to build QtWebKit with WebKit2 in MediaPlayerPrivatePhonon.cpp
Attachments
Patch (1.14 KB, patch)
2010-07-07 07:15 PDT, Jesus Sanchez-Palencia
no flags
Jesus Sanchez-Palencia
Comment 1 2010-07-07 07:15:23 PDT
Jesus Sanchez-Palencia
Comment 2 2010-07-07 07:17:43 PDT
Comment on attachment 60730 [details] Patch Patch was reviewed by Antti Koivisto. Adding to CQ.
WebKit Commit Bot
Comment 3 2010-07-07 22:57:53 PDT
Comment on attachment 60730 [details] Patch Clearing flags on attachment: 60730 Committed r62761: <http://trac.webkit.org/changeset/62761>
WebKit Commit Bot
Comment 4 2010-07-07 22:57:57 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.