2010-07-07  Jesus Sanchez-Palencia  <jesus@webkit.org>

Reviewed by Antti Koivisto.

        [Qt] Missing include to build QtWebKit with WebKit2 in MediaPlayerPrivatePhonon.cpp
        https://bugs.webkit.org/show_bug.cgi?id=41767

        * platform/graphics/qt/MediaPlayerPrivatePhonon.cpp: Add Logging.h include

Canonical link: https://commits.webkit.org/53656@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62761 268f45cc-cd09-0410-ab3c-d52691b4dbfc