WebCore/platform/graphics/qt/MediaPlayerPrivatePhonon.cpp
@@ -25,6 +25,7 @@
 
 #include "FrameView.h"
 #include "GraphicsContext.h"
+#include "Logging.h"
 #include "MIMETypeRegistry.h"
 #include "NotImplemented.h"
 #include "TimeRanges.h"
